compiler/e2e/test/snapshot/ir/wf_check/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/ir/wf_check/main.pnx:20:13
   │
 7 │         trait ImpossibleTrait[T]
   │               ------------------ the required predicate was declared here
   ·
20 │     let x = MyStruct { field: 5 }
   │             ^^^^^^^^^^^^^^^^^^^^^ the predicate `trait main::ImpossibleTrait[int32]` is not satisfied

error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/ir/wf_check/main.pnx:21:13
   │
14 │         trait ImpossibleTrait[T]
   │               ------------------ the required predicate was declared here
   ·
21 │     let y = MyEnum::Variant(10)
   │             ^^^^^^^^^^^^^^^^^^^ the predicate `trait main::ImpossibleTrait[int32]` is not satisfied

error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/ir/wf_check/main.pnx:22:23
   │
22 │     let b = (true, ...a, false)
   │                       ^ the predicate `T: tuple` is not satisfied

error: Compilation aborted due to 3 error(s)



stdout:
